--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -54,7 +54,7 @@
           <label for="cb1-input">State</label>
           <div class="group">
             <input id="cb1-input" class="cb_edit" type="text" role="combobox" aria-autocomplete="both"
-              aria-expanded="false" aria-haspopup="true" aria-controls="lb1"
+              aria-expanded="false" aria-controls="lb1"
             />
             <button type="button" id="cb1-button" aria-label="Open" tabindex="-1">&#9661;</button>
           </div>
@@ -303,14 +303,6 @@
             </th>
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the autocomplete behavior of the text input is to both show an inline completion string and suggest a list of possible values in a popup where the suggestions are related to the string that is present in the textbox.</td>
-          </tr>
-          <tr data-test-id="combobox-aria-haspopup">
-            <td></td>
-            <th scope="row">
-              <code>aria-haspopup="true"</code>
-            </th>
-            <td><code>input[type="text"]</code></td>
-            <td>Indicates that the combobox can popup another element to suggest values.</td>
           </tr>
           <tr data-test-id="combobox-aria-controls">
             <td></td>
