--- a/examples/combobox/combobox-autocomplete-list.html
+++ b/examples/combobox/combobox-autocomplete-list.html
@@ -54,7 +54,7 @@
           <label for="cb1-input">State</label>
           <div class="group">
             <input id="cb1-input" class="cb_edit" type="text" role="combobox" aria-autocomplete="list"
-              aria-expanded="false" aria-haspopup="true" aria-controls="cb1-listbox"
+              aria-expanded="false" aria-controls="cb1-listbox"
             />
             <button id="cb1-button" tabindex="-1" aria-label="Open">&#9661;</button>
           </div>
@@ -298,14 +298,6 @@
             </th>
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the autocomplete behavior of the text input is to suggest a list of possible values in a popup and that the suggestions are related to the string that is present in the textbox.</td>
-          </tr>
-          <tr data-test-id="combobox-aria-haspopup">
-            <td></td>
-            <th scope="row">
-              <code>aria-haspopup="true"</code>
-            </th>
-            <td><code>input[type="text"]</code></td>
-            <td>Indicates that the combobox can popup another element to suggest values.</td>
           </tr>
           <tr data-test-id="combobox-aria-controls">
             <td></td>
