Fix visual design issues with combobox examples 1-3
Part of #1255.

--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -13,7 +13,6 @@
 
 <!--  js and css for this example. -->
 <link rel="stylesheet" href="css/combobox.css">
-<link rel="stylesheet" href="css/listbox.css">
 <script type="text/javascript" src="js/combobox-list.js"></script>
 <script type="text/javascript" src="js/listbox.js"></script>
 <script type="text/javascript" src="js/listboxOption.js"></script>
@@ -50,12 +49,11 @@
       <h2 id="ex_label">Example</h2>
       <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
       <div id="ex1">
-        <div class="combobox-list">
-          <label for="cb1-input">State</label>
+        <label for="cb1-input">State</label>
+        <div class="combobox combobox-list">
           <div class="group">
             <input id="cb1-input" class="cb_edit" type="text" role="combobox" aria-autocomplete="both"
-              aria-expanded="false" aria-controls="lb1"
-            />
+              aria-expanded="false" aria-controls="lb1">
             <button type="button" id="cb1-button" aria-label="Open" tabindex="-1">&#9661;</button>
           </div>
           <ul id="lb1" role="listbox" aria-label="States">
