--- a/examples/combobox/combobox-autocomplete-none.html
+++ b/examples/combobox/combobox-autocomplete-none.html
@@ -13,7 +13,6 @@
 
 <!--  js and css for this example. -->
 <link href="css/combobox.css" rel="stylesheet">
-<link  href="css/listbox.css"     rel="stylesheet">
 <script src="js/combobox-list.js"  type="text/javascript"></script>
 <script src="js/listbox.js"       type="text/javascript"></script>
 <script src="js/listboxOption.js" type="text/javascript"></script>
@@ -43,23 +42,20 @@
       <li><a href="combobox-autocomplete-list.html">Editable Combobox with List Autocomplete</a>: An editable combobox that demonstrates the autocomplete behavior known as <q>list with manual selection</q>.</li>
       <li><a href="grid-combo.html">Editable Combobox with Grid Popup</a>: An editable combobox that presents suggestions in a grid, enabling users to navigate descriptive information about each suggestion.</li>
     </ul>
-    
+
     <section>
       <h2 id="ex_label">Example</h2>
       <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
       <div id="ex1">
-        <div class="combobox-list">
+        <div class="combobox combobox-list">
           <label for="cb1-input">Search</label>
           <div class="group">
             <input id="cb1-input" class="cb_edit" type="text"
                    role="combobox"
                    aria-autocomplete="none"
                    aria-expanded="false"
-                   aria-controls="cb1-listbox"
-            />
-            <button type="button" id="cb1-button" tabindex="-1" aria-label="Open">
-              &#9661;
-            </button>
+                   aria-controls="cb1-listbox">
+            <button type="button" id="cb1-button" tabindex="-1" aria-label="Open">&#9661;</button>
           </div>
           <ul id="cb1-listbox" role="listbox" aria-label="Previous Searches">
             <li id="lb1-01" role="option">weather</li>
