--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index of ARIA Design Pattern Examples | WAI-ARIA Authoring Practices 1.1</title>
+  <title>Index of ARIA Design Pattern Examples | WAI-ARIA Authoring Practices 1.2</title>
   <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
   <link rel="stylesheet" href="css/core.css">
   <script src="js/examples.js"></script>
@@ -12,14 +12,14 @@
 </head>
 <body>
   <nav aria-label="ARIA Practices">
-    <a href="../">WAI-ARIA Authoring Practices 1.1</a>
+    <a href="../">WAI-ARIA Authoring Practices 1.2</a>
   </nav>
   <main>
     <h1>Index of ARIA Design Pattern Examples</h1>
     <p>
       This page includes the following indexes of example implementations of
       <a href="../#aria_ex">ARIA design patterns</a> included in
-      <a href="../">WAI-ARIA Authoring Practices 1.1.</a>
+      <a href="../">WAI-ARIA Authoring Practices 1.2.</a>
     </p>
     <ul>
       <li><a href="#examples_by_role_label">Examples by Role</a></li>
@@ -53,7 +53,12 @@
           </tr>
           <tr>
             <td><code>button</code></td>
-            <td><a href="button/button.html">Button</a></td>
+            <td>
+              <ul>
+                <li><a href="button/button_idl.html">Button  (IDL Version)</a></li>
+                <li><a href="button/button.html">Button</a></li>
+              </ul>
+            </td>
           </tr>
           <tr>
             <td><code>checkbox</code></td>
@@ -146,6 +151,7 @@
                 <li><a href="combobox/aria1.0pattern/combobox-autocomplete-none.html">Legacy ARIA 1.0 Combobox without Autocomplete</a></li>
                 <li><a href="combobox/aria1.1pattern/listbox-combo.html">ARIA 1.1 Combobox with Listbox Popup</a></li>
                 <li><a href="listbox/listbox-collapsible.html">Collapsible Dropdown Listbox</a></li>
+                <li><a href="listbox/listbox-grouped.html">Listbox  with Grouped Options</a></li>
                 <li><a href="listbox/listbox-rearrangeable.html">Listboxes with Rearrangeable Options</a></li>
                 <li><a href="listbox/listbox-scrollable.html">Scrollable Listbox</a></li>
               </ul>
@@ -374,6 +380,7 @@
                 <li><a href="combobox/aria1.1pattern/grid-combo.html">ARIA 1.1 Combobox with Grid Popup</a></li>
                 <li><a href="combobox/aria1.1pattern/listbox-combo.html">ARIA 1.1 Combobox with Listbox Popup</a></li>
                 <li><a href="listbox/listbox-collapsible.html">Collapsible Dropdown Listbox</a></li>
+                <li><a href="listbox/listbox-grouped.html">Listbox  with Grouped Options</a></li>
                 <li><a href="listbox/listbox-rearrangeable.html">Listboxes with Rearrangeable Options</a></li>
                 <li><a href="listbox/listbox-scrollable.html">Scrollable Listbox</a></li>
                 <li><a href="menu-button/menu-button-actions-active-descendant.html">Actions Menu Button  Using aria-activedescendant</a></li>
@@ -534,6 +541,7 @@
                 <li><a href="grid/dataGrids.html">Data Grid</a></li>
                 <li><a href="grid/LayoutGrids.html">Layout Grid</a></li>
                 <li><a href="listbox/listbox-collapsible.html">Collapsible Dropdown Listbox</a></li>
+                <li><a href="listbox/listbox-grouped.html">Listbox  with Grouped Options</a></li>
                 <li><a href="listbox/listbox-rearrangeable.html">Listboxes with Rearrangeable Options</a></li>
                 <li><a href="listbox/listbox-scrollable.html">Scrollable Listbox</a></li>
                 <li><a href="menu-button/menu-button-actions-active-descendant.html">Actions Menu Button  Using aria-activedescendant</a></li>
@@ -570,6 +578,7 @@
                 <li><a href="grid/dataGrids.html">Data Grid</a></li>
                 <li><a href="grid/LayoutGrids.html">Layout Grid</a></li>
                 <li><a href="listbox/listbox-collapsible.html">Collapsible Dropdown Listbox</a></li>
+                <li><a href="listbox/listbox-grouped.html">Listbox  with Grouped Options</a></li>
                 <li><a href="listbox/listbox-rearrangeable.html">Listboxes with Rearrangeable Options</a></li>
                 <li><a href="listbox/listbox-scrollable.html">Scrollable Listbox</a></li>
                 <li><a href="menu-button/menu-button-actions-active-descendant.html">Actions Menu Button  Using aria-activedescendant</a></li>
@@ -659,6 +668,7 @@
             <td><code>aria-pressed</code></td>
             <td>
               <ul>
+                <li><a href="button/button_idl.html">Button  (IDL Version)</a></li>
                 <li><a href="button/button.html">Button</a></li>
                 <li><a href="toolbar/toolbar.html">Toolbar</a></li>
               </ul>
@@ -716,6 +726,7 @@
             <td><code>aria-valuemax</code></td>
             <td>
               <ul>
+                <li><a href="meter/meter.html">Meter</a></li>
                 <li><a href="slider/multithumb-slider.html">Horizontal Multi-Thumb Slider</a></li>
                 <li><a href="slider/slider-1.html">Horizontal Slider</a></li>
                 <li><a href="slider/slider-2.html">Slider  with aria-orientation and aria-valuetext</a></li>
@@ -727,6 +738,7 @@
             <td><code>aria-valuemin</code></td>
             <td>
               <ul>
+                <li><a href="meter/meter.html">Meter</a></li>
                 <li><a href="slider/multithumb-slider.html">Horizontal Multi-Thumb Slider</a></li>
                 <li><a href="slider/slider-1.html">Horizontal Slider</a></li>
                 <li><a href="slider/slider-2.html">Slider  with aria-orientation and aria-valuetext</a></li>
@@ -739,6 +751,7 @@
             <td><code>aria-valuenow</code></td>
             <td>
               <ul>
+                <li><a href="meter/meter.html">Meter</a></li>
                 <li><a href="slider/multithumb-slider.html">Horizontal Multi-Thumb Slider</a></li>
                 <li><a href="slider/slider-1.html">Horizontal Slider</a></li>
                 <li><a href="slider/slider-2.html">Slider  with aria-orientation and aria-valuetext</a></li>
@@ -762,7 +775,7 @@
     </section>
   </main>
   <nav aria-label="ARIA Practices">
-    <a href="../">WAI-ARIA Authoring Practices 1.1</a>
+    <a href="../">WAI-ARIA Authoring Practices 1.2</a>
   </nav>
 
 
