Add ARIA 1.2 combobox changes to change log

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -6671,10 +6671,11 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
         <li>Added section to provide guidance related to 38 document structure roles, 18 of which are new in ARIA 1.2.</li>
         <li>Revised guidance for roles where naming requirements changed in ARIA 1.2. ARIA 1.2 prohibits names on some roles. ARIA 1.2 removed naming requirements from some other roles.</li>
         <li>Added naming guidance for 18 roles that are new in ARIA 1.2.</li>
-        <li>Added a button example that illustrates use of the new ARIA 1.2 IDL interface.</li>
+        <li>Revised the combobox pattern and 4 combobox examples to reflect changes made in ARIA 1.2.</li>
         <li>Added a design pattern and example implementation of the new meter role.</li>
         <li>Added a new listbox example that illustrates new ARIA 1.2 support for named groups of options in a listbox.</li>
         <li>Revised the editor menubar example to illustrate new ARIA 1.2 support for named groups of items in a menu.</li>
+        <li>Added a button example that illustrates use of the new ARIA 1.2 IDL interface.</li>
         <li>Due to change in ARIA 1.2, removed Math role from list of roles that have presentational children.</li>
         <li>In response to feedback, revise description of Escape behavior in the combobox Pattern.</li>
         <li>Corrected color contrast in accordion and date picker examples.</li>
