--- a/examples/combobox/combobox-autocomplete-list.html
+++ b/examples/combobox/combobox-autocomplete-list.html
@@ -2,86 +2,121 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Legacy ARIA 1.0 Combobox without Autocomplete Example | WAI-ARIA Authoring Practices 1.2</title>
+<title>Editable Combobox With List Autocomplete Example | WAI-ARIA Authoring Practices 1.2</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
-<link rel="stylesheet" href="../../css/core.css">
-<script src="../../js/examples.js"></script>
-<script src="../../js/highlight.pack.js"></script>
-<script src="../../js/app.js"></script>
+<link rel="stylesheet" href="../css/core.css">
+<script src="../js/examples.js"></script>
+<script src="../js/highlight.pack.js"></script>
+<script src="../js/app.js"></script>
 
 <!--  js and css for this example. -->
-<link href="css/combobox-1.0.css" rel="stylesheet">
-<link  href="css/listbox.css"     rel="stylesheet">
-<script src="js/combobox-1.0-list.js"  type="text/javascript"></script>
+<link href="css/combobox.css" rel="stylesheet">
+<script src="js/combobox-list.js"  type="text/javascript"></script>
 <script src="js/listbox.js"       type="text/javascript"></script>
 <script src="js/listboxOption.js" type="text/javascript"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
     <ul>
-      <li><a href="../../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
       <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
       <li><a href="https://github.com/w3c/aria-practices/projects/7">Related Issues</a></li>
-      <li><a href="../../../#combobox">Design Pattern</a></li>
+      <li><a href="../../#combobox">Design Pattern</a></li>
     </ul>
   </nav>
   <main>
-    <h1>Legacy ARIA 1.0 Combobox without Autocomplete Example</h1>
+    <h1>Editable Combobox With List Autocomplete Example</h1>
     <p>
-      <strong>NOTE:</strong> Please provide feedback on this example page in
-      <a href="https://github.com/w3c/aria-practices/issues/555">issue 555.</a>
-    </p>
-    <p>
-      The below combobox that enables users to choose a term from a hypothetical list of previously searched terms demonstrates the
-      <a href="../../../#combobox">ARIA 1.0 design pattern for combobox.</a>
+      The below combobox for choosing the name of a US state or territory demonstrates the
+      <a href="../../#combobox">ARIA design pattern for combobox.</a>
       The design pattern describes four types of autocomplete behavior.
-      This example illustrates the autocomplete behavior known as <q>no autocomplete</q>.
-      The terms that appear in the listbox popup are not related to the string that is present in the textbox.
-      In this implementation, The listbox popup is not automatically triggered; it is displayed only when the user opens it.
+      This example illustrates the autocomplete behavior known as list autocomplete with manual selection.
+      If the user types one or more characters in the edit box and the typed characters match the beginning of the name of one or more states or territories, a listbox popup appears containing the matching names.
+      When the listbox appears, a suggested name is not automatically selected.
+      Thus, after typing, if the user tabs or clicks out of the combobox without choosing a value from the listbox, the typed string becomes the value of the combobox.
+      Note that this implementation enables users to input the name of a state or territory, but it does not prevent input of any other arbitrary value.
     </p>
-    <p>Similar examples include: </p>
+    <p>Similar examples include:</p>
     <ul>
-    <li><a href="combobox-autocomplete-list.html">ARIA 1.0 Combobox with List Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with manual selection</q> and uses the ARIA 1.0 implementation pattern.</li>
-    <li><a href="combobox-autocomplete-both.html">ARIA 1.0 Combobox with Both List and Inline Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with inline autocomplete</q> and uses the ARIA 1.0 implementation pattern.</li>
-      <li><a href="../aria1.1pattern/listbox-combo.html">ARIA 1.1 Combobox with Listbox Popup</a>: Comboboxes that demonstrate the various forms of autocomplete behavior using a listbox popup and use the ARIA 1.1 implementation pattern.</li>
-      <li><a href="../aria1.1pattern/grid-combo.html">ARIA 1.1 Combobox with Grid Popup</a>: A combobox that presents suggestions in a grid, enabling users to navigate descriptive information about each suggestion.</li>
+      <li><a href="combobox-autocomplete-both.html">Editable Combobox with Both List and Inline Autocomplete</a>: An editable combobox that demonstrates the autocomplete behavior known as <q>list with inline autocomplete</q>.</li>
+      <li><a href="combobox-autocomplete-none.html">Editable Combobox Without Autocomplete</a>: An editable combobox that demonstrates the behavior associated with <code>aria-autocomplete=none</code>.</li>
+      <li><a href="grid-combo.html">Editable Combobox with Grid Popup</a>: An editable combobox that presents suggestions in a grid, enabling users to navigate descriptive information about each suggestion.</li>
     </ul>
+
     <section>
       <h2 id="ex_label">Example</h2>
       <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
       <div id="ex1">
-        <div class="combobox-list">
-          <label for="cb1-input">Search</label>
+        <label for="cb1-input">State</label>
+        <div class="combobox combobox-list">
           <div class="group">
-            <input id="cb1-input" class="cb_edit" type="text"
-                   role="combobox"
-                   aria-autocomplete="none"
-                   aria-expanded="false"
-                   aria-haspopup="true"
-                   aria-owns="cb1-listbox"
-            />
-            <button type="button" id="cb1-button" tabindex="-1" aria-label="Open">
-              &#9661;
-            </button>
+            <input id="cb1-input" class="cb_edit" type="text" role="combobox" aria-autocomplete="list"
+              aria-expanded="false" aria-controls="cb1-listbox">
+            <button id="cb1-button" tabindex="-1" aria-label="Open">&#9660;</button>
           </div>
-          <ul id="cb1-listbox" role="listbox" aria-label="Previous Searches">
-            <li id="lb1-01" role="option">weather</li>
-            <li id="lb1-02" role="option">salsa recipes</li>
-            <li id="lb1-03" role="option">cheap flights to NY</li>
-            <li id="lb1-04" role="option">dictionary</li>
-            <li id="lb1-05" role="option">baseball scores</li>
-            <li id="lb1-06" role="option">hotels in NY</li>
-            <li id="lb1-07" role="option">mortgage calculator</li>
-            <li id="lb1-08" role="option">restaurants near me</li>
-            <li id="lb1-09" role="option">free games</li>
-            <li id="lb1-10" role="option">gas prices</li>
-            <li id="lb1-11" role="option">classical music</li>
+          <ul id="cb1-listbox" role="listbox" aria-label="States">
+            <li id="lb1-al" role="option">Alabama</li>
+            <li id="lb1-ak" role="option">Alaska</li>
+            <li id="lb1-as" role="option">American Samoa</li>
+            <li id="lb1-az" role="option">Arizona</li>
+            <li id="lb1-ar" role="option">Arkansas</li>
+            <li id="lb1-ca" role="option">California</li>
+            <li id="lb1-co" role="option">Colorado</li>
+            <li id="lb1-ct" role="option">Connecticut</li>
+            <li id="lb1-de" role="option">Delaware</li>
+            <li id="lb1-dc" role="option">District of Columbia</li>
+            <li id="lb1-fl" role="option">Florida</li>
+            <li id="lb1-ga" role="option">Georgia</li>
+            <li id="lb1-gm" role="option">Guam</li>
+            <li id="lb1-hi" role="option">Hawaii</li>
+            <li id="lb1-id" role="option">Idaho</li>
+            <li id="lb1-il" role="option">Illinois</li>
+            <li id="lb1-in" role="option">Indiana</li>
+            <li id="lb1-ia" role="option">Iowa</li>
+            <li id="lb1-ks" role="option">Kansas</li>
+            <li id="lb1-ky" role="option">Kentucky</li>
+            <li id="lb1-la" role="option">Louisiana</li>
+            <li id="lb1-me" role="option">Maine</li>
+            <li id="lb1-md" role="option">Maryland</li>
+            <li id="lb1-ma" role="option">Massachusetts</li>
+            <li id="lb1-mi" role="option">Michigan</li>
+            <li id="lb1-mn" role="option">Minnesota</li>
+            <li id="lb1-ms" role="option">Mississippi</li>
+            <li id="lb1-mo" role="option">Missouri</li>
+            <li id="lb1-mt" role="option">Montana</li>
+            <li id="lb1-ne" role="option">Nebraska</li>
+            <li id="lb1-nv" role="option">Nevada</li>
+            <li id="lb1-nh" role="option">New Hampshire</li>
+            <li id="lb1-nj" role="option">New Jersey</li>
+            <li id="lb1-nm" role="option">New Mexico</li>
+            <li id="lb1-ny" role="option">New York</li>
+            <li id="lb1-nc" role="option">North Carolina</li>
+            <li id="lb1-nd" role="option">North Dakota</li>
+            <li id="lb1-mp" role="option">Northern Marianas Islands</li>
+            <li id="lb1-oh" role="option">Ohio</li>
+            <li id="lb1-ok" role="option">Oklahoma</li>
+            <li id="lb1-or" role="option">Oregon</li>
+            <li id="lb1-pa" role="option">Pennsylvania</li>
+            <li id="lb1-pr" role="option">Puerto Rico</li>
+            <li id="lb1-ri" role="option">Rhode Island</li>
+            <li id="lb1-sc" role="option">South Carolina</li>
+            <li id="lb1-sd" role="option">South Dakota</li>
+            <li id="lb1-tn" role="option">Tennessee</li>
+            <li id="lb1-tx" role="option">Texas</li>
+            <li id="lb1-ut" role="option">Utah</li>
+            <li id="lb1-ve" role="option">Vermont</li>
+            <li id="lb1-va" role="option">Virginia</li>
+            <li id="lb1-vi" role="option">Virgin Islands</li>
+            <li id="lb1-wa" role="option">Washington</li>
+            <li id="lb1-wv" role="option">West Virginia</li>
+            <li id="lb1-wi" role="option">Wisconsin</li>
+            <li id="lb1-wy" role="option">Wyoming</li>
           </ul>
         </div>
       </div>
-      <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
+    <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
     </section>
 
     <section>
@@ -89,7 +124,7 @@
       <p>
       The example combobox on this page implements the following keyboard interface.
         Other variations and options for the keyboard interface are described in the
-        <a href="../../../#combobox_kbd_interaction">Keyboard Interaction section of the combobox design pattern.</a>
+        <a href="../../#combobox_kbd_interaction">Keyboard Interaction section of the combobox design pattern.</a>
       </p>
       <h3 id="kbd_label_textbox">Textbox</h3>
       <table aria-labelledby="kbd_label_textbox kbd_label" class="def">
@@ -104,8 +139,9 @@
             <th><kbd>Down Arrow</kbd></th>
             <td>
               <ul>
-                <li>First opens the listbox if it is not already displayed and then moves visual focus to the first option.</li>
-                <li>DOM focus remains on the textbox.</li>
+                <li>If the textbox is not empty and the listbox is displayed, moves visual focus to the first suggested value.</li>
+                <li>If the textbox is empty and the listbox is not displayed, opens the listbox and moves visual focus to the first option.</li>
+                <li>In both cases DOM focus remains on the textbox.</li>
               </ul>
             </td>
           </tr>
@@ -113,17 +149,22 @@
             <th><kbd>Up Arrow</kbd></th>
             <td>
               <ul>
-                <li>First opens the listbox if it is not already displayed and then moves visual focus to the last option.</li>
-                <li>DOM focus remains on the textbox.</li>
+                <li>If the textbox is not empty and the listbox is displayed, moves visual focus to the last suggested value.</li>
+                <li>If the textbox is empty, first opens the listbox if it is not already displayed and then moves visual focus to the last option.</li>
+                <li>In both cases DOM focus remains on the textbox.</li>
               </ul>
             </td>
           </tr>
           <tr data-test-id="textbox-key-enter">
             <th><kbd>Enter</kbd></th>
+            <td>Closes the listbox.</td>
+          </tr>
+          <tr data-test-id="textbox-key-escape">
+            <th><kbd>Escape</kbd></th>
             <td>
               <ul>
-                <li>Sets the textbox value to the content of the selected option.</li>
-                <li>Closes the listbox if it is displayed.</li>
+                <li>Clears the textbox.</li>
+                <li>If the listbox is displayed, closes it.</li>
               </ul>
             </td>
           </tr>
@@ -143,7 +184,7 @@
         <strong>NOTE:</strong> When visual focus is in the listbox, DOM focus remains on the textbox and the value of <code>aria-activedescendant</code> on the textbox is set to a value that refers to the listbox option that is visually indicated as focused.
         Where the following descriptions of keyboard commands mention focus, they are referring to the visual focus indicator.
         For more information about this focus management technique, see
-        <a href="../../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
+        <a href="../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
       </p>
       <table aria-labelledby="kbd_label_listbox kbd_label" class="def">
         <thead>
@@ -227,7 +268,7 @@
       <p>
         The example combobox on this page implements the following ARIA roles, states, and properties.
         Information about other ways of applying ARIA roles, states, and properties is available in the
-        <a href="../../../#combobox_roles_states_props">Roles, States, and Properties section of the combobox design pattern.</a>
+        <a href="../../#combobox_roles_states_props">Roles, States, and Properties section of the combobox design pattern.</a>
       </p>
       <h3 id="rps_label_textbox">Textbox</h3>
       <table aria-labelledby="rps_label_textbox rps_label" class="data attributes">
@@ -246,41 +287,23 @@
             </th>
             <td></td>
             <td><code>input[type="text"]</code></td>
-            <td>
-              <ul>
-                <li>Identifies the input as a combobox.</li>
-                <li>Note: The primary difference between the ARIA 1.0 pattern and the ARIA 1.1 pattern is the placement of the <code>combobox</code> role.</li>
-              </ul>
-            </td>
+            <td>Identifies the input as a combobox.</td>
           </tr>
           <tr data-test-id="combobox-aria-autocomplete">
             <td></td>
             <th scope="row">
-              <code>aria-autocomplete="none"</code>
+              <code>aria-autocomplete="list"</code>
             </th>
             <td><code>input[type="text"]</code></td>
-            <td>Indicates that the suggestions in the combobox popup are not values that complete the current textbox input.</td>
+            <td>Indicates that the autocomplete behavior of the text input is to suggest a list of possible values in a popup and that the suggestions are related to the string that is present in the textbox.</td>
           </tr>
-          <tr data-test-id="combobox-aria-haspopup">
+          <tr data-test-id="combobox-aria-controls">
             <td></td>
             <th scope="row">
-              <code>aria-haspopup="true"</code>
+              <code>aria-controls="#IDREF"</code>
             </th>
             <td><code>input[type="text"]</code></td>
-            <td>Indicates that the combobox can popup another element to suggest values.</td>
-          </tr>
-          <tr data-test-id="combobox-aria-owns">
-            <td></td>
-            <th scope="row">
-              <code>aria-owns="#IDREF"</code>
-            </th>
-            <td><code>input[type="text"]</code></td>
-            <td>
-              <ul>
-                <li>Identifies the element that serves as the popup.</li>
-                <li>Note: In the ARIA 1.1 combobox pattern, the combobox uses <code>aria-controls</code> instead of <code>aria-owns</code>.</li>
-              </ul>
-            </td>
+            <td>Identifies the element that serves as the popup.</td>
           </tr>
           <tr data-test-id="combobox-aria-expanded">
             <td></td>
@@ -311,7 +334,7 @@
                 <li>Enables assistive technologies to know which element the application regards as focused while DOM focus remains on the <code>input</code> element.</li>
                 <li>
                   For more information about this focus management technique, see
-                  <a href="../../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
+                  <a href="../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
                 </li>
               </ul>
             </td>
@@ -342,7 +365,7 @@
           <tr data-test-id="listbox-aria-label">
             <td></td>
             <th scope="row">
-              <code>aria-label="Previous Searches"</code>
+              <code>aria-label="States"</code>
             </th>
             <td><code>ul</code></td>
             <td>Provides a label for the <code>listbox</code>.</td>
@@ -382,7 +405,7 @@
       <ul>
         <li>
           CSS:
-          <a href="css/combobox-1.0.css" type="text/css">combobox-1.0.css</a>
+          <a href="css/combobox.css" type="text/css">combobox.css</a>
         </li>
         <li>
           CSS:
@@ -390,7 +413,7 @@
         </li>
         <li>
           Javascript:
-          <a href="js/combobox-1.0-list.js" type="text/javascript">combobox-1.0-list.js</a>
+          <a href="js/combobox-list.js" type="text/javascript">combobox-list.js</a>
         </li>
         <li>
           Javascript:
@@ -406,7 +429,9 @@
     <section>
       <h2 id="sc1_label">HTML Source Code</h2>
       <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-      <pre><code id="sc1"></code></pre>
+      <pre>
+        <code id="sc1"></code>
+      </pre>
       <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
       <script>
         sourceCode.add('sc1', 'ex1');
@@ -415,7 +440,7 @@
     </section>
   </main>
   <nav>
-    <a href="../../../#combobox">Combobox Design Pattern in WAI-ARIA Authoring Practices 1.2</a>
+    <a href="../../#combobox">Combobox Design Pattern in WAI-ARIA Authoring Practices 1.2</a>
   </nav>
 </body>
 </html>
