removed tab stop on tabpanel

--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -182,12 +182,11 @@
                   <div class="carousel-item active"
                        id="carousel-item-1"
                        role="tabpanel"
-                       tabindex="0"
                        aria-roledescription="slide"
                        aria-label="1 of 6">
 
                     <div class="carousel-image">
-                      <a href="#">
+                      <a href="#!">
                         <img src="images/amsterdamslide__800x600.jpg" alt="Walking Tour in Amsterdam" />
                       </a>
                     </div>
@@ -195,7 +194,7 @@
                     <div class="carousel-caption">
 
                       <h3>
-                        <a href="#">
+                        <a href="#!">
                            Dynamic Europe: Amsterdam, Prague, Berlin
                         </a>
                       </h3>
@@ -209,12 +208,11 @@
                   <div class="carousel-item"
                        id="carousel-item-2"
                        role="tabpanel"
-                       tabindex="0"
                        aria-roledescription="slide"
                        aria-label="2 of 6">
 
                     <div class="carousel-image">
-                      <a href="#">
+                      <a href="#!">
                         <img src="images/lands-endslide__800x600.jpg" alt="Land&#039;s End in Cornwall"/>
                       </a>
                     </div>
@@ -222,7 +220,7 @@
                     <div class="carousel-caption">
 
                       <h3>
-                        <a href="#">
+                        <a href="#!">
                           Travel to Southwest England and Paris
                         </a>
                       </h3>
@@ -236,12 +234,11 @@
                   <div class="carousel-item"
                       id="carousel-item-3"
                        role="tabpanel"
-                       tabindex="0"
                        aria-roledescription="slide"
                        aria-label="3 of 6">
 
                     <div class="carousel-image">
-                      <a href="#">
+                      <a href="#!">
                         <img src="images/trustslide-2__800x600.jpg" alt="Mom and daughter play Daniel Tiger game on notebook computer."/>
                       </a>
                     </div>
@@ -249,7 +246,7 @@
                     <div class="carousel-caption">
 
                       <h3>
-                        <a href="#">
+                        <a href="#!">
                           Great Children's Programming on Public TV
                         </a>
                       </h3>
@@ -263,12 +260,11 @@
                   <div class="carousel-item"
                        id="carousel-item-4"
                        role="tabpanel"
-                       tabindex="0"
                        aria-roledescription="slide"
                        aria-label="4 of 6">
 
                     <div class="carousel-image">
-                      <a href="#">
+                      <a href="#!">
                         <img src="images/foyleswarslide__800x600.jpg" alt="A man in a suit and fedora and a woman with coiffed hair look sternly into the camera."/>
                       </a>
                     </div>
@@ -276,7 +272,7 @@
                     <div class="carousel-caption">
 
                       <h3>
-                        <a href="#">
+                        <a href="#!">
                           Foyle&#8217;s War Revisited
                         </a>
                       </h3>
@@ -290,12 +286,11 @@
                   <div class="carousel-item"
                        id="carousel-item-5"
                        role="tabpanel"
-                       tabindex="0"
                        aria-roledescription="slide"
                        aria-label="5 of 6">
 
                     <div class="carousel-image">
-                      <a href="#">
+                      <a href="#!">
                         <img src="images/britcomdavidslide__800x600.jpg" alt="British flag with WILL-TV host David Thiel."/>
                       </a>
                     </div>
@@ -303,7 +298,7 @@
                     <div class="carousel-caption">
 
                       <h3>
-                        <a href="#">
+                        <a href="#!">
                           Great Britain Vote: 7 pm Sat.
                         </a>
                       </h3>
@@ -316,12 +311,11 @@
                   <div class="carousel-item"
                        id="carousel-item-6"
                        role="tabpanel"
-                       tabindex="0"
                        aria-roledescription="slide"
                        aria-label="6 of 6">
 
                     <div class="carousel-image">
-                      <a href="#">
+                      <a href="#!">
                         <img src="images/mag800-2__800x600.jpg" alt="Mid-American Gardener panelists on the set" />
                       </a>
                     </div>
@@ -329,7 +323,7 @@
                     <div class="carousel-caption">
 
                       <h3>
-                        <a href="#">
+                        <a href="#!">
                           Mid-American Gardener: Thursdays at 7 pm
                         </a>
                       </h3>
@@ -725,21 +719,6 @@
                   </ul>
                 </td>
               </tr>
-            <tr data-test-id="tabpanel-tabindex">
-              <td></td>
-              <th scope="row">
-                <code>tabindex=<q>0</q></code>
-              </th>
-              <td>
-                <code>div</code>
-              </td>
-              <td>
-                <ul>
-                  <li>Puts the tabpanel in the page <kbd>Tab</kbd> sequence.</li>
-                  <li>Facilitates movement to panel content for assistive technology users.</li>
-                </ul>
-              </td>
-            </tr>
             <tr data-test-id="tabpanel-roledescription">
                 <td></td>
                 <th scope="row">
