editorial change to tabindex on tabpanel

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2636,7 +2636,7 @@
             <ul>
               <li>When focus moves into the tab list, places focus on the active <code>tab</code> element.</li>
               <li>When the tab list contains the focus, moves focus to the next element in the page tab sequence outside the tablist, which is typically either the first focusable element inside the tab panel or the tab panel itself.</li>
-              <li>When the first element contained within a <code>tabpanel</code> element is not focusable, it should set <code>tabindex="0"</code> to make it part of the tab sequence.</li>
+              <li>When the first element contained within a <code>tabpanel</code> element is not focusable, the <code>tabpanel</code> element should have <code>tabindex="0"</code> to make it part of the tab sequence.</li>
             </ul>
           </li>
           <li>When focus is on a tab element in a horizontal tab list:
