added ids to image links for regression testing

--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -186,7 +186,7 @@
                        aria-label="1 of 6">
 
                     <div class="carousel-image">
-                      <a href="#!">
+                      <a href="#!" id="carousel-image-1">
                         <img src="images/amsterdamslide__800x600.jpg" alt="Walking Tour in Amsterdam" />
                       </a>
                     </div>
@@ -212,7 +212,7 @@
                        aria-label="2 of 6">
 
                     <div class="carousel-image">
-                      <a href="#!">
+                      <a href="#!" id="carousel-image-2">
                         <img src="images/lands-endslide__800x600.jpg" alt="Land&#039;s End in Cornwall"/>
                       </a>
                     </div>
@@ -238,7 +238,7 @@
                        aria-label="3 of 6">
 
                     <div class="carousel-image">
-                      <a href="#!">
+                      <a href="#!" id="carousel-image-3">
                         <img src="images/trustslide-2__800x600.jpg" alt="Mom and daughter play Daniel Tiger game on notebook computer."/>
                       </a>
                     </div>
@@ -264,7 +264,7 @@
                        aria-label="4 of 6">
 
                     <div class="carousel-image">
-                      <a href="#!">
+                      <a href="#!" id="carousel-image-4">
                         <img src="images/foyleswarslide__800x600.jpg" alt="A man in a suit and fedora and a woman with coiffed hair look sternly into the camera."/>
                       </a>
                     </div>
@@ -290,7 +290,7 @@
                        aria-label="5 of 6">
 
                     <div class="carousel-image">
-                      <a href="#!">
+                      <a href="#!" id="carousel-image-5">
                         <img src="images/britcomdavidslide__800x600.jpg" alt="British flag with WILL-TV host David Thiel."/>
                       </a>
                     </div>
@@ -315,7 +315,7 @@
                        aria-label="6 of 6">
 
                     <div class="carousel-image">
-                      <a href="#!">
+                      <a href="#!" id="carousel-image-6">
                         <img src="images/mag800-2__800x600.jpg" alt="Mid-American Gardener panelists on the set" />
                       </a>
                     </div>
