--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -13,9 +13,7 @@
 
 <!--  js and css for this example. -->
 <link rel="stylesheet" href="css/combobox.css">
-<script type="text/javascript" src="js/combobox-list.js"></script>
-<script type="text/javascript" src="js/listbox.js"></script>
-<script type="text/javascript" src="js/listboxOption.js"></script>
+<script type="text/javascript" src="js/combobox-autocomplete.js"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
@@ -54,7 +52,18 @@
           <div class="group">
             <input id="cb1-input" class="cb_edit" type="text" role="combobox" aria-autocomplete="both"
               aria-expanded="false" aria-controls="lb1">
-            <button type="button" id="cb1-button" aria-label="Open" tabindex="-1">&#9660;</button>
+            <button type="button" id="cb1-button" aria-label="Open" tabindex="-1">
+              <span class="up">
+                <svg width="18" height="18">
+                  <polygon points="4,16 14,16 9,9" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
+                </svg>
+              </span>
+              <span class="down">
+                <svg width="18" height="18">
+                  <polygon points="4,9 14,9 9,16" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
+                </svg>
+              </span>
+            </button>
           </div>
           <ul id="lb1" role="listbox" aria-label="States">
             <li id="lb1-al" role="option">Alabama</li>
