--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" src="../js/app.js"></script>
 
 <!--  js and css for this example. -->
-<link rel="stylesheet" href="css/combobox.css">
+<link rel="stylesheet" href="css/combobox-autocomplete.css">
 <script type="text/javascript" src="js/combobox-autocomplete.js"></script>
 </head>
 <body>
@@ -53,12 +53,12 @@
             <input id="cb1-input" class="cb_edit" type="text" role="combobox" aria-autocomplete="both"
               aria-expanded="false" aria-controls="lb1">
             <button type="button" id="cb1-button" aria-label="Open" tabindex="-1">
-              <span class="up">
+              <span class="arrow up">
                 <svg width="18" height="18">
                   <polygon points="4,16 14,16 9,9" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
                 </svg>
               </span>
-              <span class="down">
+              <span class="arrow down">
                 <svg width="18" height="18">
                   <polygon points="4,9 14,9 9,16" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
                 </svg>
@@ -177,8 +177,8 @@
             <th><kbd>Escape</kbd></th>
             <td>
               <ul>
-                <li>Clears the textbox.</li>
                 <li>If the listbox is displayed, closes it.</li>
+                <li>If the listbox is not displayed, clears the textbox.</li>
               </ul>
             </td>
           </tr>
@@ -419,23 +419,11 @@
       <ul>
         <li>
           CSS:
-          <a href="css/combobox.css" type="text/css">combobox.css</a>
-        </li>
-        <li>
-          CSS:
-          <a href="css/listbox.css" type="text/css">listbox.css</a>
+          <a href="css/combobox-autocomplete.css" type="text/css">combobox-autocomplete.css</a>
         </li>
         <li>
           Javascript:
-          <a href="js/combobox-list.js" type="text/javascript">combobox-list.js</a>
-        </li>
-        <li>
-          Javascript:
-          <a href="js/listbox.js" type="text/javascript">listbox.js</a>
-        </li>
-        <li>
-          Javascript:
-          <a href="js/listboxOption.js" type="text/javascript">listboxOption.js</a>
+          <a href="js/combobox-autocomplete.js" type="text/javascript">combobox-autocomplete.js</a>
         </li>
       </ul>
     </section>
