--- a/examples/combobox/combobox-autocomplete-list.html
+++ b/examples/combobox/combobox-autocomplete-list.html
@@ -12,10 +12,9 @@
 <script src="../js/app.js"></script>
 
 <!--  js and css for this example. -->
-<link href="css/combobox.css" rel="stylesheet">
-<script src="js/combobox-list.js"  type="text/javascript"></script>
-<script src="js/listbox.js"       type="text/javascript"></script>
-<script src="js/listboxOption.js" type="text/javascript"></script>
+<link href="css/combobox-autocomplete.css" rel="stylesheet">
+<script src="js/combobox-autocomplete.js"  type="text/javascript"></script>
+
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
@@ -54,7 +53,18 @@
           <div class="group">
             <input id="cb1-input" class="cb_edit" type="text" role="combobox" aria-autocomplete="list"
               aria-expanded="false" aria-controls="cb1-listbox">
-            <button id="cb1-button" tabindex="-1" aria-label="Open">&#9660;</button>
+            <button id="cb1-button" tabindex="-1" aria-label="Open">
+              <span class="arrow up">
+                <svg width="18" height="18">
+                  <polygon points="4,16 14,16 9,9" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
+                </svg>
+              </span>
+              <span class="arrow down">
+                <svg width="18" height="18">
+                  <polygon points="4,9 14,9 9,16" style="fill:gray;stroke:gray;stroke-width:1"></polygon>
+                </svg>
+              </span>
+            </button>
           </div>
           <ul id="cb1-listbox" role="listbox" aria-label="States">
             <li id="lb1-al" role="option">Alabama</li>
@@ -163,9 +173,9 @@
             <th><kbd>Escape</kbd></th>
             <td>
               <ul>
-                <li>Clears the textbox.</li>
                 <li>If the listbox is displayed, closes it.</li>
-              </ul>
+                <li>If the listbox is not displayed, clears the textbox.</li>
+               </ul>
             </td>
           </tr>
           <tr data-test-id="standard-single-line-editing-keys">
@@ -405,23 +415,11 @@
       <ul>
         <li>
           CSS:
-          <a href="css/combobox.css" type="text/css">combobox.css</a>
-        </li>
-        <li>
-          CSS:
-          <a href="css/listbox.css" type="text/css">listbox.css</a>
+          <a href="css/combobox-autocomplete.css" type="text/css">combobox-autocomplete.css</a>
         </li>
         <li>
           Javascript:
-          <a href="js/combobox-list.js" type="text/javascript">combobox-list.js</a>
-        </li>
-        <li>
-          Javascript:
-          <a href="js/listbox.js" type="text/javascript">listbox.js</a>
-        </li>
-        <li>
-          Javascript:
-          <a href="js/listboxOption.js" type="text/javascript">listboxOption.js</a>
+          <a href="js/combobox-autocomplete.js" type="text/javascript">combobox-autocomplete.js</a>
         </li>
       </ul>
     </section>
