added documentation and tests for ALT Down Arrow feature

--- a/examples/combobox/combobox-autocomplete-none.html
+++ b/examples/combobox/combobox-autocomplete-none.html
@@ -109,6 +109,12 @@
               </ul>
             </td>
           </tr>
+          <tr data-test-id="textbox-key-alt-down-arrow">
+            <th><kbd>Alt + Down Arrow</kbd></th>
+            <td>
+                Opens the listbox but no option is selected and visual focus and DOM focus stays on the textbox.
+            </td>
+          </tr>
           <tr data-test-id="textbox-key-up-arrow">
             <th><kbd>Up Arrow</kbd></th>
             <td>
